minireplica-rollingupdate-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fail-both-policies
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fail-app
  template:
    metadata:
      labels:
        app: fail-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
