nodedeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duniversity-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: duniversity-backend
  template:
    metadata:
      labels:
        app: duniversity-backend
    spec:
      nodeSelector:
        training: devops

      affinity:
        nodeAffinity:
          #HARD rule (must be satisfied)
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: training
                operator: In
                values:
                - devops

          #SOFT rule (best-effort preference)
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            preference:
              matchExpressions:
              - key: node-type
                operator: In
                values:
                - backend

      containers:
      - name: duniversity-backend
        image: ashutosh4782/duniversity-college-portal-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
