deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capsule-app
  namespace: team4-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: capsule-app
  template:
    metadata:
      labels:
        app: capsule-app
    spec:
      containers:
      - name: capsule-app
        image: lijazs/retail-devops-project:v1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: capsule-service
  namespace: team4-ns
spec:
  selector:
    app: capsule-app
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
