minireplica-rollingupdate-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srollingupdate
spec:
  crd:
    spec:
      names:
        kind: K8sRollingUpdate
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srollingupdate

        violation[{"msg": msg}] {
          input.review.object.kind == "Deployment"
          not input.review.object.spec.strategy.type
          msg := "Deployment must define a strategy"
        }

        violation[{"msg": msg}] {
          input.review.object.kind == "Deployment"
          input.review.object.spec.strategy.type != "RollingUpdate"
          msg := "Only RollingUpdate strategy is allowed"
        }
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sminreplicas
spec:
  crd:
    spec:
      names:
        kind: K8sMinReplicas
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sminreplicas

        violation[{"msg": msg}] {
          input.review.object.kind == "Deployment"
          replicas := input.review.object.spec.replicas
          replicas < 2
          msg := sprintf("Deployment must have at least 2 replicas, found %v", [replicas])
        }
